--- a/WebRTCTutorial/WebRTCTutorial/UI/Base.lproj/Main.storyboard
+++ b/WebRTCTutorial/WebRTCTutorial/UI/Base.lproj/Main.storyboard
@@ -27,20 +27,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTi-fC-hsP" userLabel="Join View">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Room number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29Z-P0-uvc">
-                                        <rect key="frame" x="20" y="20" width="204" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r1U-Lr-9cR">
-                                        <rect key="frame" x="244" y="22" width="30" height="30"/>
-                                        <state key="normal" title="Join"/>
-                                        <state key="selected" title="Disconnect"/>
-                                        <connections>
-                                            <action selector="join:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PdX-j8-Ieu"/>
-                                        </connections>
-                                    </button>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wlI-Ze-zso">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wlI-Ze-zso">
                                         <rect key="frame" x="20" y="74" width="334" height="300"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -50,17 +37,54 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="76" translatesAutoresizingMaskIntoConstraints="NO" id="35G-Wf-450">
+                                        <rect key="frame" x="37" y="678" width="300" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukY-9r-1cP">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="BUC-nF-GLc"/>
+                                                    <constraint firstAttribute="height" constant="40" id="RC0-qy-TF4"/>
+                                                </constraints>
+                                                <state key="normal" image="mic_pressed"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FyX-Za-aKo">
+                                                <rect key="frame" x="116" y="0.0" width="68" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="TfJ-eC-kcQ"/>
+                                                    <constraint firstAttribute="width" constant="68" id="znD-Cb-9lu"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="end"/>
+                                                <connections>
+                                                    <action selector="join:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Co8-AK-XYp"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eq-IS-b7f">
+                                                <rect key="frame" x="260" y="0.0" width="40" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="kJZ-cu-RVr"/>
+                                                    <constraint firstAttribute="height" constant="40" id="xsf-po-PkJ"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="switch"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Mobile Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iCq-Rb-SXO" customClass="YokoTextField" customModule="WebRTCTutorial" customModuleProvider="target">
+                                        <rect key="frame" x="37" y="565" width="300" height="33"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="wlI-Ze-zso" firstAttribute="top" secondItem="29Z-P0-uvc" secondAttribute="bottom" constant="20" id="28e-EH-KJU"/>
-                                    <constraint firstItem="29Z-P0-uvc" firstAttribute="top" secondItem="cTi-fC-hsP" secondAttribute="top" constant="20" id="6ia-EE-VAS"/>
-                                    <constraint firstItem="r1U-Lr-9cR" firstAttribute="leading" secondItem="29Z-P0-uvc" secondAttribute="trailing" constant="20" id="CHJ-WX-uID"/>
+                                    <constraint firstAttribute="bottom" secondItem="35G-Wf-450" secondAttribute="bottom" constant="100" id="1Ic-Ig-uXd"/>
+                                    <constraint firstAttribute="trailing" secondItem="35G-Wf-450" secondAttribute="trailing" constant="37" id="7mb-GN-TmA"/>
+                                    <constraint firstItem="35G-Wf-450" firstAttribute="top" secondItem="iCq-Rb-SXO" secondAttribute="bottom" constant="80" id="9bH-32-chB"/>
                                     <constraint firstAttribute="trailing" secondItem="wlI-Ze-zso" secondAttribute="trailing" constant="20" id="DZW-vZ-Mrw"/>
-                                    <constraint firstItem="r1U-Lr-9cR" firstAttribute="centerY" secondItem="29Z-P0-uvc" secondAttribute="centerY" id="bMO-Vs-L3B"/>
-                                    <constraint firstAttribute="trailing" secondItem="29Z-P0-uvc" secondAttribute="trailing" constant="150" id="fef-NR-Uza"/>
-                                    <constraint firstItem="29Z-P0-uvc" firstAttribute="leading" secondItem="cTi-fC-hsP" secondAttribute="leading" constant="20" id="oxH-xZ-rXS"/>
-                                    <constraint firstItem="wlI-Ze-zso" firstAttribute="leading" secondItem="29Z-P0-uvc" secondAttribute="leading" id="r3i-Ow-0KU"/>
+                                    <constraint firstAttribute="trailing" secondItem="iCq-Rb-SXO" secondAttribute="trailing" constant="37" id="VIt-5y-Y5D"/>
+                                    <constraint firstItem="iCq-Rb-SXO" firstAttribute="leading" secondItem="cTi-fC-hsP" secondAttribute="leading" constant="37" id="xXQ-K6-mga"/>
+                                    <constraint firstItem="35G-Wf-450" firstAttribute="leading" secondItem="cTi-fC-hsP" secondAttribute="leading" constant="37" id="zNI-Xn-8Ta"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -82,16 +106,17 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="JoinEndButton" destination="FyX-Za-aKo" id="b3z-jd-Obc"/>
+                        <outlet property="RoomNumberTxt" destination="iCq-Rb-SXO" id="jib-J7-eiz"/>
                         <outlet property="containerView" destination="gbD-rE-w3B" id="Efb-tb-SgH"/>
-                        <outlet property="joinButton" destination="r1U-Lr-9cR" id="fE9-V3-1p5"/>
                         <outlet property="preview" destination="1gQ-1p-NJE" id="LN0-Tv-2Tg"/>
-                        <outlet property="roomNumberTextField" destination="29Z-P0-uvc" id="iO7-2m-omM"/>
+                        <outlet property="roomNumberTextField" destination="iCq-Rb-SXO" id="aDe-Q5-dZD"/>
                         <outlet property="stateTextView" destination="wlI-Ze-zso" id="2G5-oC-z75"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="131"/>
+            <point key="canvasLocation" x="137.68115942028987" y="130.58035714285714"/>
         </scene>
         <!--Video Call View Controller-->
         <scene sceneID="G0l-Vw-68E">
@@ -133,7 +158,15 @@
             <point key="canvasLocation" x="906" y="130"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="iCq-Rb-SXO">
+            <size key="intrinsicContentSize" width="151.5" height="33"/>
+        </designable>
+    </designables>
     <resources>
+        <image name="end" width="292" height="292"/>
+        <image name="mic_pressed" width="220" height="220"/>
+        <image name="switch" width="220" height="220"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
